--- a/style.css
+++ b/style.css
@@ -1,14 +1,26 @@
 body {
-  font-family: Arial, sans-serif;
-  text-align: center;
-  padding: 2rem;
+  margin: 0;
+  font-family: sans-serif;
   background: #0d0d0d;
-  color: #f2f2f2;
+  color: white;
+  display: flex;
+  justify-content: center;
 }
 
-#graph-container {
-  margin-top: 2rem;
-  height: 500px;
-  border: 1px dashed #444;
-  border-radius: 10px;
+.container {
+  text-align: center;
+  margin-top: 50px;
+}
+
+input, button {
+  padding: 10px;
+  margin: 10px;
+  font-size: 1em;
+}
+
+#graphContainer {
+  margin-top: 30px;
+  width: 100%;
+  height: 600px;
+  border: 1px solid #333;
 }
